--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Welcome to my web page
                   
 你看这个网站想干什么？
                     
-我的世界》（原版名称：Minecraft）是一款沙盒类电子游戏，开创者为马库斯·阿列克谢·泊松（Notch）。游戏由Mojang Studios维护，隶属于微软Xbox游戏工作室。中国版现由网易游戏代理，于2017年8月8日在中国大陆运营 [60]  。
+《我的世界》（原版名称：Minecraft）是一款沙盒类电子游戏，开创者为马库斯·阿列克谢·泊松（Notch）。游戏由Mojang Studios维护，隶属于微软Xbox游戏工作室。中国版现由网易游戏代理，于2017年8月8日在中国大陆运营 [60]  。
 自开创伊始到延斯·伯根斯坦加入并负责开发之前，我的世界几乎全部的开发工作由Notch完成。游戏音乐由丹尼尔·罗森费尔德和莉娜·雷恩创作；克里斯托弗·泽特斯特兰绘制了游戏中的画。游戏最初于2009年5月17日作为Classic版本发布，并于2011年11月18日发布Java正式版。我的世界的游戏平台囊括桌面设备、移动设备和游戏主机。 [5] 
 该游戏以玩家在三维空间中自由地创造和破坏不同种类的方块为主题。玩家在游戏中可以在单人或多人模式中通过摧毁或创造精妙绝伦的建筑物和艺术，或者收集物品探索地图以完成游戏的成就（进度）。玩家也可以尝试红石电路和指令等玩法。
 中文名我的世界原版名称Minecraft别    名MC、麦块、当个创世神(台译)游戏类型沙盒游戏原作者马库斯·阿列克谢·泊松游戏平台Java版：Windows、macOS、Linux [1] 
