--- a/index.html
+++ b/index.html
@@ -2512,3 +2512,4 @@ Mojang的奖杯
 广州市天河区人民法院做出一审判决《奶块》立即停止混淆宣传，删除游戏与宣传画面中侵权画面并赔偿2000万元。 [65-67] 
 《我的世界》基岩 Beta 测试版拥有自己的独立应用程序
 Windows 《我的世界》基岩 Beta 测试版已经拥有自己的独立应用程序，也就是《我的世界》预览版（Minecraft Preview），将对《我的世界》所有者和 XGP 订阅用户免费。 [68] 
+以上内容来自百度百科
