--- a/index.html
+++ b/index.html
@@ -2513,3 +2513,71 @@ Mojang的奖杯
 《我的世界》基岩 Beta 测试版拥有自己的独立应用程序
 Windows 《我的世界》基岩 Beta 测试版已经拥有自己的独立应用程序，也就是《我的世界》预览版（Minecraft Preview），将对《我的世界》所有者和 XGP 订阅用户免费。 [68] 
 以上内容来自百度百科
+
+我们来谈谈最新的快照 （22w18a）
+寄托
+最新快照将于今天晚些时候发布，我们希望得到您的反馈！有关此版本中的内容以及如何玩的更多详细信息，请参见以下内容：
+
+Minecraft Java Edition Snapshot 22w18a
+
+错误、滞后或崩溃问题怎么办？
+
+请提交错误或使用我们的游戏和支持资源来查找这些错误应该去哪里。任何错误，支持或发布状态以及游戏问题帖子都将被删除。
+
+我有一个全新的想法或功能！
+
+请务必在相应类别中添加有关新功能的建议或反馈。
+
+奇偶校验对我们的开发人员来说非常重要，因此每个人都可以在Java和Bedrock上获得相同的体验。虽然这并不总是同时发生，但已经宣布的主要功能正在为两个客户端工作。不用担心！
+
+感谢您的耐心等待！
+
+您可以在知识库的“快照信息和更改日志”类别中找到所有以前的更改日志。
+
+化身 注册用户分享了这个想法
+昨天上午 12：21
+4 条评论
+脸书 唽 
+发表评论：
+请登录以发表评论。
+按最旧的排序
+投票
+2
+ 已注册用户评论评论操作
+昨天上午 12：51 永久链接
+我想，当我说《典狱长》的实施在死亡时掉落一个骷髅催化剂违背了《典狱长》的目的时，我代表了其他人。
+
+守护者是要避免的，而不是主动耕种的，加上骷髅催化剂在深黑生物群系中很丰富，真的不需要仅仅为了获得它们而养殖一个生物。典狱长的特别之处在于，直接与它战斗没有奖励，而是通过欺骗来避免它，否则应该会导致你的死亡。
+
+这个决定完全取决于你，但我会把典狱长掉落一个催化剂和远程伤害恢复到30。典狱长原本是要拼出厄运，如果你不遵守它的规则，打破规则，并承受你行为的后果。
+
+投票
+3
+ 已注册用户评论评论操作
+昨天上午 04：35 永久链接
+萤火虫不会仅仅因为它对青蛙有毒而添加吗？我们可以简单地阻止青蛙吃它们。白桦林更新只在白桦树上增加了一个额外的日志，以及一些新的装饰块，如真菌和悬挂的苔藓，这应该很容易实现。我觉得最近在Mojang中有太多完美主义的本质，在添加到游戏中之前，功能必须是顶级的，并且具有完美的标志性图形。这可能是更新速度太慢的原因之一？
+
+我认为下界更新是良好更新的典范。鼓励探索的地狱，堡垒和野蛮人作为挑战，新的美丽的生物群系，猪林作为下界村民......我希望未来的更新可以同样好，与最好的Minecraft模组相媲美。现在，Deep Dark没有独特而诱人的奖励。恢复指南针和音乐光盘感觉太像一个新奇的收藏品，实际上并不像下界或elytra那样有用。它不一定是一个打破游戏规则的升级，即使是像快速盔甲或荆棘盾牌这样的侧坡也很好，只是让它独一无二吗？
+
+投票
+4
+ 已注册用户评论评论操作
+昨天上午 14：46 永久链接
+也许古代城市之所以有平庸的战利品，为什么没有添加萤火虫，是因为可怕的“我的世界香草”公式，这些东西需要完美地适应基础游戏，并且变化需要很小。我们不能拥有闪亮的新装备，生物和d1，因为它太“模组化”了，但我强烈反对这种立场。有必要偏离Minecraft香草公式，以制作一款在未来几十年内仍然相关的更好游戏。Minecraft在这些类似mod的变化（如更新水上和突袭）之后获得了一波人气。
+
+不添加vertic@s1abs，sh@@rks和@l1igators的理由一直很弱。限制创造力？它们通过添加更多选项（如果有的话）来增加创造力。教孩子们这些动物很好？Minecraft不应该是一个PETA教育游戏，它应该作为一个生存游戏，在那里你做你必须做的事情来生存。
+
+这种完美主义的立场阻碍了我的世界。Hytale正在添加Minecraft玩家一直想要的所有这些功能，并因此而受到赞扬。Mojang最终会输给竞争对手，如果他们对这些太固执了。
+
+如果由于滞后和错误修复而更新缓慢，那么我可以理解。基岩版有一些需要修复的关键错误。我仍然要感谢开发人员进行免费更新，并将继续支持他们购买。
+
+投票
+2
+ 已注册用户评论评论操作
+昨天在 21：10 编辑 永久链接
+我个人不介意看守放弃催化剂。大多数玩家不会养殖它们，因为从生物群系中更容易获得它们。可再生掉落对于科技玩家来说很有趣，我希望其他生物会有更多的掉落。
+
+另外，关于“限制创造力”的原因？创造力是一件非常罕见的事情，因为大多数玩家不知道如何制作一个好看的房子。如果玩家更喜欢住在城堡等生成的建筑中，或者让NPC为他们建造一座好房子，请让他们。“一次一个街区”似乎是一个值得怀疑的原则，因为即时满足是使游戏变得有趣的原因。对于许多玩家来说，必须谷歌并学习如何建造房屋并不好玩，而且速度也很慢。
+
+《我的世界》中的 furrn1ture 也存在一个问题。使用标志和物品框架来创建它们，它们看起来很糟糕，而且大量滞后。Hytale还增加了功能性的furrn1ture，它们在家中看起来非常好。
+以上内容来自https://feedback.minecraft.net/hc/en-us/community/posts/5997855411469-Let-s-talk-about-the-most-recent-snapshot-22w18a-
